<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC eMoney Proto</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_disabled">NFC disabled. Would you like to enable?</string>
    <string name="tSaldo">BU</string>
    <string name="bPay">Pay</string>
    <string name="bHistory">History</string>
    <string name="bSync">Sync</string>
    <string name="bOption">Option</string>
    <string name="bPaySend">Send</string>
    <string name="bPayCancel">Cancel</string>
    <string name="tPaySESN">Security Number\t\t\t:</string>
    <string name="tPayAmount">Amount\t\t\t\t\t\t\t:</string>
    <string name="tOptionOldPass">Current PIN\t\t\t\t\t:</string>
    <string name="tOptionNewPass">New PIN\t\t\t\t\t\t:</string>
    <string name="tOptionConfPass">Confirm PIN\t\t\t\t\t:</string>
    <string name="bOptionProceed">Proceed</string>
    <string name="bOptionCancel">Cancel</string>
    <string name="tRegACCN">Account ID :</string>
    <string name="tRegNewPass">New PIN :</string>
    <string name="tRegConfPass">Confirm PIN :</string>
    <string name="bRegConfirm">Confirm</string>
    <string name="bRegCancel">Cancel</string>
    <string name="tLoginPassword">PIN :</string>
    <string name="bLoginProceed">Proceed</string>
    <string name="bLoginCancel">Cancel</string>
    <string name="tMainDebug">Waiting debug result</string>
    <string name="tHistoryError">Failed to load log history!\nChange in App Data is forbidden and irreversible!</string>
    <string name="tMainSaldoLabel">Saldo :</string>
    <string name="tMainBalanceVerified">BV</string>
    <string name="tPayWaitReceipt">Transaction Success!!\n\nTap merchant device to get receipt\nPress Finish to finish transaction without receiving transaction receipt</string>
    <string name="bAbsen">Absen</string>
    <string name="tAbsenRandom">Random Number\t\t:</string>
    <string name="bAbsenProceed">Proceed</string>
    <string name="bAbsenCancel">Cancel</string>
    <string name="bParkir">Parkir</string>
    <string name="tParkir">Please tap parking meter</string>
    <string name="tOptionLicense">License Number\t\t\t:</string>

</resources>
